<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black2"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/ivLoginLogo"
        android:layout_width="132dp"
        android:layout_height="167dp"
        android:layout_marginTop="47dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_logo_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llLoginForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:background="@drawable/style_login_signup_form"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLoginLogo">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="250dp"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/white"
            android:gravity="center_horizontal"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="250dp"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/white"
            android:gravity="center_horizontal"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:background="@drawable/style_get_started_button"
            android:text="@string/LOGIN"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvSignupDontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="35dp"
        android:text="@string/dont_have_account"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/tvLoginToSignUp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llLoginForm" />

    <TextView
        android:id="@+id/tvLoginToSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/click_here"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvSignupDontHaveAccount"
        app:layout_constraintTop_toBottomOf="@id/llLoginForm"/>

</androidx.constraintlayout.widget.ConstraintLayout>